--- a/css/styles.css
+++ b/css/styles.css
@@ -181,10 +181,21 @@ ul {
 }
 
 /* Hero */
-.container .hero-main {
-  display: block;
-  margin-top: 200px;
-  margin-bottom: 200px;
+
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/overlay.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero {
@@ -408,6 +419,18 @@ ul {
 
 .social-item:not(:first-child) {
   margin-left: 10px;
+}
+
+/*Clients*/
+
+.clients-title {
+  margin-bottom: 50px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /* Button */
