--- a/css/styles.css
+++ b/css/styles.css
@@ -604,7 +604,7 @@ ul {
   text-transform: uppercase;
   color: var(--primary-background-color);
 }
-.icon-command-footer {
+.icon-footer {
   fill: var(--primary-background-color);
 }
 
