--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ ul {
   padding-right: 15px;
 }
 
-/* ЛОГОТИП */
+/*---------------ЛОГОТИП---------------- */
 .logo {
   padding-top: 24px;
   padding-bottom: 24px;
@@ -68,7 +68,7 @@ ul {
   font-size: 26px;
   line-height: 1.2;
 }
-/* Header */
+/*------------------Header--------------------- */
 
 .header {
   background-color: var(--secondary-text-color);
@@ -76,14 +76,15 @@ ul {
   border-bottom: 1px solid #ececec;
 }
 
-/*Navigation*/
+/*-------------------Navigation---------------------------*/
 
 .navigation {
   display: flex;
   align-items: center;
 }
-/* Site nav */
+/*--------------------Site nav----------------------- */
 .link {
+  position: relative;
   color: var(--title-text-color);
   text-decoration: none;
   font-weight: 500;
@@ -96,8 +97,20 @@ ul {
 .link:focus {
   color: var(--accent-color);
 }
-.site-nav .link.current {
+
+.link.current {
   color: var(--accent-color);
+}
+
+.link.current::after {
+  position: absolute;
+  bottom: -1px;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: var(--accent-color);
 }
 
 .site-nav {
@@ -117,7 +130,7 @@ ul {
   padding-bottom: 32px;
 }
 
-/* auth-nav */
+/*-----------------auth-nav--------------------- */
 
 .auth-nav {
   display: flex;
@@ -169,7 +182,7 @@ ul {
   color: var(--footer-link-color);
 }
 
-/* Hero */
+/*------------------Hero----------------------*/
 
 .overlay {
   max-width: 1600px;
@@ -204,7 +217,7 @@ ul {
   letter-spacing: 0.06em;
 }
 
-/* Sections */
+/*-----------------Sections-------------------- */
 
 .section-title {
   color: var(--title-text-color);
@@ -216,7 +229,7 @@ ul {
   text-decoration: none;
 }
 
-/* Feacher-list */
+/*--------------Feacher-list------------------------- */
 
 .icon {
   display: flex;
@@ -306,7 +319,7 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
 }
-/* Section command */
+/* ---------------------Section command-------------------------- */
 .command {
   background-color: var(--third-background-color);
 }
@@ -330,9 +343,6 @@ ul {
 .command-link:focus {
   background-color: var(--accent-color);
 }
-/*.icon-command-instagram {
-  fill: var(--icons-fill-color);
-}*/
 
 .command-link:hover .icon-command,
 .command-link:focus .icon-command {
@@ -396,12 +406,12 @@ ul {
 }
 
 .social-networks-list {
-  display: inline-flex;
+  display: flex;
   padding-left: 0;
   margin-top: 16px;
 }
 
-/*Clients*/
+/*-------------------------Clients---------------------*/
 
 .clients-title {
   margin-bottom: 50px;
@@ -444,7 +454,7 @@ ul {
   color: var(--accent-color);
 }
 
-/* Button*/
+/*---------------------- Button---------------------*/
 .button-primary {
   border: 1px solid transparent;
   min-width: 73px;
@@ -520,7 +530,7 @@ ul {
   background-color: #118ce8;
 }
 
-/* footer */
+/*----------------------- footer-------------------------- */
 
 .footer-logo {
   display: inline-block;
@@ -609,7 +619,7 @@ ul {
   background-color: var(--accent-color);
 }
 
-/*Портфоліо*/
+/*------------------Портфоліо---------------------*/
 
 .visually-hidden {
   position: absolute;
@@ -635,7 +645,7 @@ ul {
 .buttons-list .item + .item {
   margin-left: 8px;
 }
-/*benefits-list*/
+/*-----------------------benefits-list-------------------------*/
 .benefits-list {
   display: flex;
   flex-wrap: wrap;
@@ -644,6 +654,7 @@ ul {
 }
 
 .benefits-list .item {
+  position: relative;
   width: 370px;
   margin: 15px;
 }
@@ -682,4 +693,85 @@ ul {
 .benefits-list .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.benefits-thumb {
+  position: relative;
+}
+
+.benefits-thumb:hover::before,
+.benefits-thumb:focus::before {
+  opacity: 1;
+}
+
+.benefits-thumb::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+}
+
+.benefits-hover-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 63px 24px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--primary-background-color);
+}
+
+.benefits-thumb:hover .benefits-hover-text {
+  opacity: 1;
+}
+
+/*-----------------modal window-----------------*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  width: 528px;
+  height: 581px;
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+/* .icon-btn-close {}*/
+
+.btn-close {
+  margin-top: 8px;
+  margin-right: 8px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
