thumbs images worklist

--- a/css/styles.css
+++ b/css/styles.css
@@ -288,7 +288,7 @@ ul {
   letter-spacing: 0.03em;
   text-align: left;
 }
-/* Work-list */
+/*---------------------- Work-list *-------------------------------/*/
 
 .img {
   display: block;
@@ -318,6 +318,36 @@ ul {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+.work-list-thumb {
+  position: relative;
+}
+
+.work-list-thumb::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.work-thumb-text {
+  position: absolute;
+  bottom: 27px;
+  left: 50%;
+  transform: translate(-50%);
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--primary-background-color);
 }
 /* ---------------------Section command-------------------------- */
 .command {
